--- a/events.html
+++ b/events.html
@@ -9,21 +9,51 @@
   <!-- Bootstrap CSS -->
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css"
     integrity="sha384-JcKb8q3iqJ61gNV9KGb8thSsNjpSL0n8PARn9HuZOnIxN0hoP+VmmDGMN5t9UJ0Z" crossorigin="anonymous" />
-  
-  <!--aos link-->
-  <link rel="stylesheet" type="text/css" href="aos/aos.css">
+    <link rel="stylesheet" type="text/css" href="aos/aos.css">
 
-  <title>TRPWS - EVENTS</title>
-  <!-- Favicon-->
-  <link rel="icon" type="image" href="./images/website-favicon.png" sizes="192x192" />
+  <title>Events</title>
 
-  
+  <!-- Optional JavaScript -->
+  <!-- jQuery first, then Popper.js, then Bootstrap JS -->
+  <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"
+    integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous">
+  </script>
+  <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js"
+    integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous">
+  </script>
+  <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/js/bootstrap.min.js"
+    integrity="sha384-OgVRvuATP1z7JjHLkuOU7Xw704+h835Lr+6QL9UvYjZE3Ipu6Tp75j7Bh/kR0JKI" crossorigin="anonymous">
+  </script>
+  <script src="https://use.fontawesome.com/releases/v5.0.8/js/all.js"></script>
+
   <link rel="stylesheet" type="text/css" href="style.css">
   <!-- custom add-ons -->
   <link rel="stylesheet" type="text/css" href="add.css">
   <script src="owl.carousel/owl.carousel.min.js"></script>
+  <script src="aos/aos.js"></script>
   <link href="boxicons/css/boxicons.min.css" rel="stylesheet">
   <link rel="stylesheet" href="fontawesome/css/all.css">
+
+   <style type="text/css">
+      #mybtn {
+        display: none;
+        position: fixed;
+        bottom: 20px;
+        right: 30px;
+        z-index: 99;
+        border: none;
+        outline: none;
+        background-color: #1E8449;
+        color: white;
+        cursor: pointer;
+        padding: 15px;
+        border-radius: 10px;
+        font-size: 18px;
+      }
+      #mybtn:hover{
+        background-color: #145A32;
+      }
+    </style>
 
 </head>
 
@@ -32,7 +62,7 @@
   <!------navigation------->
   <div class="container-fluid menu">
     <nav class="navbar navbar-expand-lg my-navbar">
-      <a class="navbar-brand " href="#"><img src="./images/trpws.png" height="50px" alt="" loading="lazy"></a>
+      <a class="navbar-brand " href="#"><img src="img/logo.png" height="85px" width="165px"  alt="" loading="lazy"></a>
       <button class="navbar-toggler custom-toggler" type="button" data-toggle="collapse"
         data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false"
         aria-label="Toggle navigation">
@@ -77,7 +107,7 @@
       <div class="row justify-content-start">
         <div class="col-md-5" data-aos="fade-up"
         data-aos-anchor-placement="center-bottom">
-          <img src="./images/events_images/shiksha.png" class="img-fluid" alt="image_1">
+          <img src="img/portfolio/carousel2.png" class="img-fluid" alt="image_1">
         </div>
         <div class="col-md-7 pt-4" data-aos="fade-left">
           <h2>PROJECT SHIKSHA</h2>
@@ -95,7 +125,7 @@
       <div class="row justify-content-start">
         <div class="col-md-5 order-1 order-md-2" data-aos="fade-up"
         data-aos-anchor-placement="center-bottom">
-          <img src="./images/events_images/PAWSITIVITY.jpg" class="img-fluid" alt="image_2">
+          <img src="img/portfolio/pawsitive_img.jpg" class="img-fluid" alt="image_2">
         </div>
         <div class="col-md-7 pt-5 order-2 order-md-1" data-aos="fade-right">
           <h2>PAWSITIVITY</h2>
@@ -115,7 +145,7 @@
       <div class="row justify-content-start">
         <div class="col-md-5" data-aos="fade-up"
         data-aos-anchor-placement="center-bottom">
-          <img src="./images/events_images/bhangra_night.jpg" class="img-fluid" alt="image_3">
+          <img src="img\portfolio\bhangra_night.jpg" class="img-fluid" alt="image_3">
         </div>
         <div class="col-md-7 pt-5" data-aos="fade-left">
           <h2>BHANGRA NIGHT</h2>
@@ -135,7 +165,7 @@
       <div class="row justify-content-start">
         <div class="col-md-5 order-1 order-md-2" data-aos="fade-up"
         data-aos-anchor-placement="center-bottom">
-          <img src="./images/events_images/environment-day.jpg" class="img-fluid" alt="image_4">
+          <img src="img\portfolio\environment-day.jpg" class="img-fluid" alt="image_4">
         </div>
         <div class="col-md-7 pt-5 order-2 order-md-1" data-aos="fade-right">
           <h2>WORLD ENVIRONMENT DAY</h2>
@@ -162,7 +192,7 @@
       <div class="row justify-content-start">
         <div class="col-md-5" data-aos="fade-up"
         data-aos-anchor-placement="center-bottom">
-          <img src="./images/events_images/development session.jpg" class="img-fluid" alt="image_5">
+          <img src="img/portfolio/carousel5.jpg" class="img-fluid" alt="image_5">
         </div>
         <div class="col-md-7 pt-5" data-aos="fade-left">
           <h2>PERSONALITY DEVELOPMENT SESSION</h2>
@@ -184,7 +214,7 @@
       <div class="row justify-content-start">
         <div class="col-md-5 order-1 order-md-2" data-aos="fade-up"
         data-aos-anchor-placement="center-bottom">
-          <img src="./images/events_images/national_museum_img.jpeg" class="img-fluid" alt="image_6">
+          <img src="img/portfolio/national_museum_img.jpeg" class="img-fluid" alt="image_6">
         </div>
         <div class="col-md-7 pt-5 order-2 order-md-1" data-aos="fade-right">
           <h2>NATIONAL MUSEUM</h2>
@@ -208,7 +238,7 @@
       <div class="row justify-content-start">
         <div class="col-md-5" data-aos="fade-up"
         data-aos-anchor-placement="center-bottom">
-          <img src="./images/events_images/railway-museum.jpg" class="img-fluid" alt="image_7">
+          <img src="img/portfolio/museum.jpg" class="img-fluid" alt="image_7">
         </div>
         <div class="col-md-7 pt-5" data-aos="fade-left">
           <h2>RAILWAY MUSEUM</h2>
@@ -232,7 +262,7 @@
       <div class="row justify-content-start">
         <div class="col-md-5 order-1 order-md-2" data-aos="fade-up"
         data-aos-anchor-placement="center-bottom">
-          <img src="./images/events_images/menstruation.jpg" class="img-fluid" alt="image_8">
+          <img src="img/portfolio/menstruation.jpg" class="img-fluid" alt="image_8">
         </div>
         <div class="col-md-7 pt-5 order-2 order-md-1" data-aos="fade-right">
           <h2>MENSTRUATION CLASS</h2>
@@ -259,7 +289,7 @@
       <div class="row justify-content-start">
         <div class="col-md-5" data-aos="fade-up"
         data-aos-anchor-placement="center-bottom">
-          <img src="./images/events_images/guru_randhwa.jpeg" class="img-fluid" alt="image_9">
+          <img src="img/portfolio/guru_randhwa.jpeg" class="img-fluid" alt="image_9">
         </div>
         <div class="col-md-7 pt-5" data-aos="fade-left">
           <h2>GURU RANDHAWA</h2>
@@ -284,7 +314,7 @@
       <div class="row justify-content-start">
         <div class="col-md-5 order-1 order-md-2" data-aos="fade-up"
         data-aos-anchor-placement="center-bottom">
-          <img src="./images/events_images/airforce_museum.jpeg" class="img-fluid" alt="image_9">
+          <img src="img/portfolio/airforce_museum.jpeg" class="img-fluid" alt="image_9">
         </div>
         <div class="col-md-7 pt-5 order-2 order-md-1" data-aos="fade-right">
           <h2>AIRFORCE MUSEUM</h2>
@@ -308,7 +338,7 @@
       <div class="row justify-content-start">
         <div class="col-md-5" data-aos="fade-up"
         data-aos-anchor-placement="center-bottom">
-          <img src="./images/events_images/rahagiri.jpg" class="img-fluid" alt="image_10">
+          <img src="img/portfolio/rahagiri.jpg" class="img-fluid" alt="image_10">
         </div>
         <div class="col-md-7 pt-5" data-aos="fade-left">
           <h2>RAHAGIRI</h2>
@@ -332,48 +362,46 @@
   <!--main_body_end-->
   <!---------footer---------->
   <footer id="footer">
-    <div class="footer-top">
-      <div class="container">
-        <div class="row">
+        <div class="footer-top">
+            <div class="container">
+                <div class="row" >
+                  <div class="col-lg-4 col-md-6 footer-contact" style="height: 200px">
+                    <img src="img/logo.png" height="85%">
+                    
+                  </div>
 
-          <div class="col-lg-3 col-md-6 footer-contact">
-            <h3>The Rising People Welfare Society</h3>
-            <p>
-              Woodland Park, Block C<br>
-              Tagore Garden, Subhash Nagar<br>
-              Delhi, 110018<br><br>
-              <strong>Phone:</strong> +918800100021<br>
-              <strong>Email:</strong> trpws2012@gmail.com<br>
-            </p>
-          </div>
+                    <div class="col-lg-4 col-md-6 footer-contact" style="height: 200px">
+                        <h3 style="color: #1E8449"><b>The Rising People Welfare Society</b></h3>
+                        <p>
+                            Woodland Park, Block C<br>
+                            Tagore Garden, Subhash Nagar<br>
+                            Delhi, 110018<br>
+                            <strong>Phone:</strong> +918800100021<br>
+                            <strong>Email:</strong> trpws2012@gmail.com<br>
+                        </p>
+                    </div>
+                    <div class="col-lg-4">
+                      <div class="social-links text-center text-md-right pt-3 pt-md-0">
+                    <a href="https://twitter.com/hashtag/trpws" class="twitter" target="_blank"><i
+                            class="bx bxl-twitter"></i></a>
+                    <a href="https://www.facebook.com/TRPWS/" class="facebook" target="_blank"><i
+                            class="bx bxl-facebook"></i></a>
+                    <a href="https://www.instagram.com/trpws/" class="instagram" target="_blank"><i
+                            class="bx bxl-instagram"></i></a>
+                    <a href="https://www.youtube.com/channel/UCv0nOO_iLRQcEyDQbu89jmw" class="google-plus"
+                        target="_blank"><i class="bx bxl-youtube"></i></a>
+                    <a href="https://www.linkedin.com/jobs/the-rising-people-welfare-society-jobs/?originalSubdomain=in"
+                        class="linkedin" target="_blank"><i class="bx bxl-linkedin"></i></a>
+                </div>
+                    </div>
 
+                </div>
+                
+            </div>
         </div>
-        <div class="social-links text-center text-md-right pt-3 pt-md-0">
-          <a href="https://twitter.com/hashtag/trpws" class="twitter" target="_blank"><i class="bx bxl-twitter"></i></a>
-          <a href="https://www.facebook.com/TRPWS/" class="facebook" target="_blank"><i class="bx bxl-facebook"></i></a>
-          <a href="https://www.instagram.com/trpws/" class="instagram" target="_blank"><i
-              class="bx bxl-instagram"></i></a>
-          <a href="https://www.youtube.com/channel/UCv0nOO_iLRQcEyDQbu89jmw" class="google-plus" target="_blank"><i
-              class="bx bxl-youtube"></i></a>
-          <a href="https://www.linkedin.com/jobs/the-rising-people-welfare-society-jobs/?originalSubdomain=in"
-            class="linkedin" target="_blank"><i class="bx bxl-linkedin"></i></a>
-        </div>
-      </div>
-    </div>
-  </footer>
+    </footer>
+    <button onclick="topFunction()" id = "mybtn" title="Go to top">Go to Top</button>
 
-  <!-- Optional JavaScript -->
-  <!-- jQuery first, then Popper.js, then Bootstrap JS -->
-  <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"
-    integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous">
-  </script>
-  <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js"
-    integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous">
-  </script>
-  <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/js/bootstrap.min.js"
-    integrity="sha384-OgVRvuATP1z7JjHLkuOU7Xw704+h835Lr+6QL9UvYjZE3Ipu6Tp75j7Bh/kR0JKI" crossorigin="anonymous">
-  </script>
-  
 
   <!-- navbar animation -->
   <script>
@@ -387,12 +415,24 @@
       });
     });
   </script>
-
-  <script src="https://use.fontawesome.com/releases/v5.0.8/js/all.js"></script>
-  <script src="aos/aos.js"></script>
   <script>
     AOS.init();
   </script>
+  <script type="text/javascript">
+      myButton = document.getElementById("mybtn");
+      window.onscroll = function() {scrollfunction()};
+      function scrollfunction() {
+        if(document.body.scrollTop  > 40 || document.documentElement.scrollTop > 40) {
+          myButton.style.display = "Block";
+        } else {
+          myButton.style.display = "none";
+        }
+      }
+      function topFunction() {
+        document.body.scrollTop = 0;
+        document.documentElement.scrollTop = 0;
+      }
+    </script>
 </body>
 
 </html>
